--- a/javascript/corn.html
+++ b/javascript/corn.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-    <script src="pepper.js"></script>
+    <script src="ecma_standard.js"></script>
   </body>
 </html>
